--- a/css/estilo.css
+++ b/css/estilo.css
@@ -62,3 +62,98 @@ body {
 #hearts {
     color: #f00;
 }
+
+#start {
+    background-image: url('../img/bckg.jpg');
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* Center and scale the image nicely */
+  
+}
+
+#start button {
+    background: rgb(255, 157, 0);
+}
+  
+  #buttons {
+      margin-top: 30%;
+    height: 20%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+
+  }
+  
+  #buttons button {
+    min-width: 300px;
+    min-height: 60px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 22px;
+    text-transform: uppercase;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    color: #313133;
+    background: rgb(255, 157, 0);
+  background: linear-gradient(90deg, rgba(255,155,0,1) 0%, rgba(240,180,0,1) 100%);
+    border: none;
+    border-radius: 1000px;
+    box-shadow: 12px 12px 24px rgba(240,180,0,.64);
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    padding: 10px;
+    }
+  
+  button::before {
+  content: '';
+    border-radius: 1000px;
+    min-width: calc(300px + 12px);
+    min-height: calc(60px + 12px);
+    box-shadow: 0 0 60px rgba(255,155,0,1);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .3s ease-in-out 0s;
+  }
+  
+  button:hover::before, button:focus::before {
+    opacity: 1;
+  }
+  
+  button::after {
+    content: '';
+    width: 30px; height: 30px;
+    border-radius: 100%;
+    border: 6px solid rgba(255,155,0,1);
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: none;
+  }
+  
+  button:hover::after, button:focus::after {
+    animation: ring 1.5s infinite;
+  }
+  
+  @keyframes ring {
+    0% {
+      width: 30px;
+      height: 30px;
+      opacity: 1;
+    }
+    100% {
+      width: 300px;
+      height: 300px;
+      opacity: 0;
+    }
+  }
